# pocket-portals

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  creative-writing.md  crewai.md  docker-compose.yml  package-lock.json  package.json  product.md  pyproject.toml  render.yaml  tasks.md  test_narrator_spike.py  vitest.config.js
.agentic-framework/: README.md
.agentic-framework/integration/: handoff-template.md  session-template.md
.agentic-framework/personas/: architect.yml  developer.yml  qa.yml  writer.yml
.agentic-framework/quality-gates/: README.md  generic-gates.md
.agentic-framework/templates/: adr-template.md  project-config.yml
.serena/: project.yml
coverage/: api.js.html  character-sheet.js.html  combat.js.html  controllers.js.html  coverage-final.json  game-state.js.html  haptics.js.html  index.html  main.js.html  messages.js.html  themes.js.html
docs/: ONBOARDING.md  README.md  architecture-diagrams.md  architecture.md  design.md  improvements.md  insomnia-collection.json  playwright-e2e-suite.md  product.md
scripts/: demo_adventure_pacing.py
src/: __init__.py  settings.py
static/: combat-test.html  index.html
tests/: __init__.py  conftest.py  test_api.py  test_api_quest_progress.py  test_backends.py  test_character.py  test_character_interviewer.py  test_combat_api.py  test_combat_manager.py  test_combat_state.py  test_config_loader.py  test_dice.py  test_epilogue.py  test_executor.py  test_flow.py  test_game_session_flow.py  test_game_session_service.py  test_innkeeper.py  test_jester.py  test_keeper.py  test_models.py  test_moments.py  test_narrator.py  test_quest_designer.py  test_quest_selection.py  test_quest_sse.py  test_rate_limiting.py  test_redis_backend.py  test_router.py  test_schemas.py  test_session_manager.py
(+144 files in other folders)
